<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/tela_login">

    <include
        android:id="@+id/include"
        layout="@layout/line"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_bugcode"
        app:layout_constraintBottom_toTopOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.614" />

    <include
        android:id="@+id/include2"
        layout="@layout/line2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/user"
        android:layout_marginTop="20dp"
        app:boxBackgroundMode="outline"
        android:hint="@string/user_name"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="@+id/include2"
        app:layout_constraintStart_toStartOf="@+id/include2"
        app:layout_constraintTop_toTopOf="@+id/include2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:inputType="textCapWords"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        app:boxBackgroundMode="outline"
        android:hint="@string/password"
        app:hintTextColor="@color/colorAccent"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/include2"
        app:layout_constraintStart_toStartOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/user">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHighlight="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:textColor="@android:color/white"
        android:background="@drawable/round2"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/cadastro"
        app:layout_constraintEnd_toEndOf="@+id/include2"
        app:layout_constraintStart_toStartOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/cadastro"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="@+id/include2"
        app:layout_constraintStart_toStartOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_facebook"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/snack_layout"
        app:layout_constraintStart_toStartOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/cadastro" />

    <ImageView
        android:id="@+id/instagram"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_instagram"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toTopOf="@id/snack_layout"
        app:layout_constraintEnd_toStartOf="@+id/google"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/cadastro" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_google"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/snack_layout"
        app:layout_constraintEnd_toEndOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/cadastro" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snack_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>